# url_shortener

./: .gitignore  LICENSE  README.md
di/apps/url_shortener_back/: .env  do.sh  include.conf  systemd.log.sh  systemd.service
di/demo/url_shortener_back/: hosts
di/rc/url_shortener_back/: systemd.sh
di/sh/: after-deploy.sh  build.css.2.sh  build.css.sh  build.js.sh  check_utils.sh  deploy.sh  get-dependencies-for-deploy.sh  start_prepare_Makefile_build.2.sh  start_prepare_Makefile_build.sh
di/sh/core/: .sh  ansi.sh  do.common.sh  echoerr.sh  find_in.sh  from-symlink.sh  get_HostName_User_of_Host_from.demo.sh  get_HostName_User_of_Host_from.sh  help.common.sh  help.deploy.sh  help.nginx_conf.sh  help.sh  nginx_conf.sh  prepare_Makefile.dependencies.deploy.sh  prepare_Makefile.dependencies.nginx_conf.sh  prepare_Makefile.dependencies.systemd.log.sh  prepare_Makefile.dependencies.systemd.sh  prepare_Makefile.sh  read_hosts_from.demo.sh  read_hosts_from.sh  systemd.log.sh  systemd.sh  x.sh
src/rust/: Cargo.toml  udeps.sh
src/rust/arrange_millis/: Cargo.toml
src/rust/arrange_millis/src/: lib.rs
src/rust/common_macros/: Cargo.toml
src/rust/common_macros/src/: declare_env_settings.rs  declare_settings.rs  lib.rs  pasitos.rs  will_did.rs
src/rust/op_mode/: Cargo.toml
src/rust/op_mode/src/: lib.rs
src/rust/url_shortener_back/: .env  Cargo.toml  README.md  settings.toml
src/rust/url_shortener_back/sh/: about.sh  about_dev.sh  resolve.sh  resolve_dev.sh  shorten.sh  shorten_dev.sh  stat.sh  stat_dev.sh
src/rust/url_shortener_back/src/: main.rs
src/rust/url_shortener_back/src/pasitos/: data.rs  mod.rs
src/rust/url_shortener_back/src/server/: about.rs  error.rs  mod.rs  resolve.rs  shorten.rs  stat.rs
