[package]
name = "op_mode"
version = "0.1.0"
# 0.1.0 - initial
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
common_macros = { path = "../common_macros" }
